# eval-containers

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  AGENTS.md  AUDIT.md  BAKE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER-DECISIONS.md  LICENSE  MANIFESTO.md  README.md  RELEASE-READINESS.md  RELEASE.md  RULES.md  SECURITY.md  dist-workspace.toml  dock-spec.md  docker-bake.hcl
cli/: Cargo.toml  README.md
cli/src/: bake.rs  benchmark.rs  build.rs  gen_bake.rs  images.rs  main.rs  naming.rs  oracle.rs  push.rs  report.rs  run.rs
cli/tests/: cli_conformance.rs
containers/models/replay/: Cargo.toml  Dockerfile  docker-bake.hcl  health  server.py  start
containers/models/replay/src/: main.rs
tests/: Cargo.toml  DOCKERFILE.md  FLEET.md  LOCAL.md  MATRIX.md  RULES.md  TRAJECTORY.md  VERIFY.md  audit-dockerfile.md  audit-fleet.md  audit-rules-drift.md  audit-trajectory.md  build-known-broken.md  build.rs  check.rs  compose.rs  compose.sweep.sh  dockerfile_inspection.rs  fleet-report.md  fleet.rs  harness.rs  helm.rs  helm.sweep.sh  lib.sh  replay.rs  run  task_inspection.rs
tests/agents/: RULES.md  broken.md  test.rs
tests/cli/: RULES.md  conformance.rs
tests/common/: mod.rs
tests/containers/: RULES.md
tests/fixtures/: aider-polyglot-0-aider.trajectory.jsonl  aime-0-claude-code.trajectory.jsonl  aime-0-raw.trajectory.jsonl  appworld-0-claude-code.trajectory.jsonl  arc-agi-0-claude-code.trajectory.jsonl  bfcl-0-codex.trajectory.jsonl  browsecomp-0-codex.trajectory.jsonl  gaia-0-goose.trajectory.jsonl  healthbench-0-claude-code.trajectory.jsonl  hle-0-claude-code.trajectory.jsonl  humaneval-0-gemini-cli.trajectory.jsonl  ifeval-0-claude-code.trajectory.jsonl  kumo-0-codex.trajectory.jsonl  livecodebench-0-codex.trajectory.jsonl  math-500-0-aider.trajectory.jsonl  mgsm-0-codex.trajectory.jsonl  mmmu-0-claude-code.trajectory.jsonl  simpleqa-0-goose.trajectory.jsonl
tests/fleet/: RULES.md  test.rs
tests/gateways/: RULES.md  test.rs
tests/live/: RULES.md  matrix.md  test.rs
tests/oracle/: test.rs
tests/policy/compose/: benchmark.rego
tests/policy/dockerfile/: hygiene.rego  hygiene_test.rego  inspection_test.rego  labels_test.rego  pins.rego  pins_test.rego  run.sh
tests/prototype/: README.md  check.bats  helm.sh
tests/prototype/gateways/: compose.yaml  run.sh  tester.sh
tests/replay/: RULES.md  test.rs
tests/replay/fixtures/: agentbench-179-cline.trajectory.jsonl  agentbench-239-continue-cli.trajectory.jsonl  agentbench-59-codex.trajectory.jsonl  agentcompany-104-copilot-cli.trajectory.jsonl  agentcompany-139-crush.trajectory.jsonl  agentcompany-34-codex.trajectory.jsonl  agentdojo-51-goose.trajectory.jsonl  agentharm-0-claude-code.trajectory.jsonl  agentharm-105-mini-swe-agent.trajectory.jsonl  agentharm-140-open-interpreter.trajectory.jsonl  ai2d-1852-openclaw.trajectory.jsonl  ai2d-2469-opencode.trajectory.jsonl  ai2d-617-codex.trajectory.jsonl  aider-polyglot-44-codex.trajectory.jsonl  aime-0-claude-code.trajectory.jsonl  aime-17-claude-code.trajectory.jsonl  aime-35-plandex.trajectory.jsonl  aime-45-gemini-cli.trajectory.jsonl  aime-53-qwen-code.trajectory.jsonl  alpaca-eval-482-ra-aid.trajectory.jsonl  appworld-0-claude-code.trajectory.jsonl  appworld-584-claude-code.trajectory.jsonl  arc-0-codex.trajectory.jsonl  arc-agi-0-claude-code.trajectory.jsonl  arc-agi-0-codex.trajectory.jsonl  arc-agi-23-codex.trajectory.jsonl  arc-agi-71-aider.trajectory.jsonl  arena-hard-299-bob.trajectory.jsonl  assistantbench-0-claude-code.trajectory.jsonl  assistantbench-12-cline.trajectory.jsonl  assistantbench-19-continue-cli.trajectory.jsonl  bbh-3906-copilot-cli.trajectory.jsonl  bfcl-0-codex.trajectory.jsonl  bfcl-0-gemini-cli.trajectory.jsonl  bigcodebench-0-codex.trajectory.jsonl  bigcodebench-455-open-interpreter.trajectory.jsonl  broken.json  chartqa-0-codex.trajectory.jsonl  chartqa-499-claude-code.trajectory.jsonl  chartqa-999-qwen-code.trajectory.jsonl  (+152 more)
tests/run/: Cargo.toml
tests/run/agents/: RULES.md  broken.md  fixture.jsonl  test.rs
tests/run/common/: mod.rs
tests/run/fleet/: RULES.md  report.md  test.rs
tests/run/gateways/: RULES.md  test.rs
tests/run/live/: RULES.md  test.rs
tests/run/oracle/: test.rs
tests/run/replay/: MATRIX.md  RULES.md  replay-lean.yaml  replay-upstream.yaml  replay.env.example  test.rs
tests/run/replay/fixtures/: advbench-103-codex.traces.jsonl  advbench-103-codex.trajectory.jsonl  advbench-311-aider.traces.jsonl  advbench-311-aider.trajectory.jsonl  agentbench-119-bob.traces.jsonl  agentbench-119-bob.trajectory.jsonl  agentbench-179-cline.traces.jsonl  agentbench-179-cline.trajectory.jsonl  agentbench-239-continue-cli.traces.jsonl  agentbench-59-codex.traces.jsonl  agentbench-59-codex.trajectory.jsonl  agentcompany-104-copilot-cli.traces.jsonl  agentcompany-104-copilot-cli.trajectory.jsonl  agentcompany-139-crush.traces.jsonl  agentcompany-139-crush.trajectory.jsonl  agentcompany-34-codex.traces.jsonl  agentcompany-34-codex.trajectory.jsonl  agentdojo-51-goose.traces.jsonl  agentdojo-51-goose.trajectory.jsonl  agentharm-0-claude-code.traces.jsonl  agentharm-0-claude-code.trajectory.jsonl  agentharm-105-mini-swe-agent.traces.jsonl  agentharm-105-mini-swe-agent.trajectory.jsonl  agentharm-140-open-interpreter.traces.jsonl  ai2d-617-codex.traces.jsonl  (+408 more)
tests/run/upstream/: test.rs
tests/sanity/: RULES.md  check.rs  compose.rs  dockerfile_inspection.bats  dockerfile_inspection.rs  no-floating-latest.sh  task_inspection.bats  task_inspection.jq  task_inspection.rs  task_inspection_audit.golden.tsv  task_inspection_audit.release.bats  upstream_pins.bats  upstream_pins.rs
tests/security/: trivy.sh
tests/static/: Cargo.toml  RULES.md  check.rs  compose.config.sweep.sh  compose.sweep.sh  dockerfile_inspection.rs  grader.rs  helm.sweep.sh  model-paths.sweep.sh  standalone.sweep.sh  task_inspection.rs
tests/static/security/: trivy.sh
tests/support/: Cargo.toml
tests/support/src/: lib.rs
tests/upstream/: RULES.md  test.rs
(+1891 files in other folders)
