# Virtual workspace root. The Rust packaging lives in `cli/` (the published
# `eval-containers` binary + library); the fleet's integration-test suite is
# its own crate in `tests/` (depends on `cli`) so the quality process is a
# first-class citizen, not a subdirectory of the optional CLI. The container
# fleet itself (benchmarks/agents/models/core/gateways/compose) lives in
# `containers/`, and platform-specific deployment in `deploy/`.
[workspace]
members = ["cli", "tests"]
resolver = "2"

# Profiles may only live at the workspace root. The release/dist profile is
# consumed by `dist` (see dist-workspace.toml) to build the published binaries.
[profile.dist]
inherits = "release"
lto = "thin"
