[package]
name = "eval-containers"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A build system for AI agent evaluations"
authors = ["The Exgentic organization and its contributors"]
license = "Apache-2.0"
repository = "https://github.com/Exgentic/eval-containers"
homepage = "https://github.com/Exgentic/eval-containers"
readme = "README.md"
keywords = ["evaluation", "benchmark", "llm", "agents", "docker"]
categories = ["command-line-utilities", "development-tools::build-utils"]
# Publish only the Rust crate, not the 100-benchmark / 20-agent fleet that
# lives in ../containers. Patterns are gitignore-style; the LEADING SLASH
# anchors each to this package root (cli/). The binary embeds nothing at
# compile time (no include_str!/include_bytes!), so src/ + the manifest +
# the crate README/LICENSE are enough. (Cargo.lock is the workspace lock at
# the repo root and is bundled by `cargo package` automatically.)
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
# `dotenvy::dotenv()` walks up from cwd to find a `.env` file and loads
# its contents into the process env without overwriting existing keys —
# the same well-trodden pattern as Node's `dotenv`. Called from main()
# so every `eval-containers` invocation auto-picks up the repo's `.env`
# (HF_TOKEN, OPENAI_API_KEY, …). Tests inherit this behavior when they
# shell out to the CLI; nothing test-specific to maintain.
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The CLI's own unit tests live in `src/**` (`#[cfg(test)]`) and need no extra
# dependencies. The fleet's integration suite (which drives docker/helm against
# real images) is a separate workspace crate at ../tests so the fleet's quality
# process is not buried inside the optional CLI.
