# Standalone crate (own [workspace] table) so it builds in the isolated
# `models/replay` Docker context, decoupled from the repo's main workspace.
[workspace]

[package]
name = "replay-server"
version = "0.1.0"
edition = "2021"
description = "Eval Containers replay model: serves recorded OTLP gen_ai traces as live provider APIs"
license = "Apache-2.0"

[[bin]]
name = "replay-server"
path = "src/main.rs"

[dependencies]
serde_json = "1"
tiny_http = "0.12"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
